src/index.css
@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap");
* {
  --container-width-1g: 75%;
  --container-width-md: 86%;
  --container-width-ms: 90%;
}

:root {
  --color-bg: #1f1f38;
  --color-bg-variant: #313159;
  --color-primary: #7373d1;
  --color-primary-variant: rgba(77, 181, 255, 0.4);
  --color-white: #fff;
  --color-light: rgba(255, 255, 255, 0.6);
  --container-width-lg: 75%;

  --container-width-1g: 75%;
  --container-width-md: 86%;
  --container-width-ms: 90%;
}

html, body{
  
}



html {
  scroll-behavior: smooth;
}

::-webkit-scrollbar {
  display: none;
}

body {
  font-family: "Lato", sans-serif;
  margin: 0px;
  background: var(--color-bg);
  color: var(--color-white);
  line-height: 1.7;
  /* background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,255,255,1) 0%, rgba(0,212,255,0.4458158263305322) 100%); */
}

.container {
  width: var(--container-width-1g);
  margin: 0 auto;
}
.text-container {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  flex-wrap: wrap;
  /* background-color: var(--color-bg-variant);
  box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2),
    0 6px 20px 0 rgba(255, 255, 255, 0.19); */
  padding: 2rem;
  /* border: 2px solid rgb(255, 255, 255);
  border-radius: 5px; */
  margin-top: 3rem;
  width: 50%;
}
.picture-container {
  width: 50%;
}
a:link {
  color: var(--color-white);
  text-decoration: none;
}
a:visited {
  color: var(--color-white);
}
a:hover {
  color: var(--color-primary);
}

section {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

nav {
  color: var(--color-primary-variant);
  position: fixed;
  bottom: 20px;
  display: flex;
  justify-content: center;
  
}

nav a {
  padding: 10px 15px 10px 15px;
  color: var(--color-white);
}

h1,
h2,
h3,
h4,
h5 {
  font-weight: 500;
}
.nav-container {
  background-color: #1f1f38;
  padding: 2px 10px 2px 10px;
  /* border: 1px solid #ccc !important; */
}

.main {
  /* display: grid;
  grid-template-columns: 25px auto 25px;
  grid-template-rows: 25px 100px auto 25px; */
  flex-direction: column;
}

.hover-icon1,
.hover-icon2,
.hover-icon3,
.hover-icon4,
.hover-icon5 {
  visibility: hidden;
  text-align: center;
  border-radius: 6px;
  bottom: 40px;
  z-index: 1;
  position: absolute;
}

.nav-icon1:hover .hover-icon1 {
  visibility: visible;
}
.nav-icon2:hover .hover-icon2 {
  visibility: visible;
}
.nav-icon3:hover .hover-icon3 {
  visibility: visible;
}
.nav-icon4:hover .hover-icon4 {
  visibility: visible;
}
.nav-icon5:hover .hover-icon5 {
  visibility: visible;
}

header {
  grid-column: 2/3;
  grid-row: 1/2;
  text-align: center;
}

section {
  height: 100vh;
}

section > h2 {
  color: var(--color-white);
}

section > h2,
section > h5 {
  color: var(--color-light);
}

.main-content {
  border-right: 2px solid black;
  border-top: 2px solid black;
  margin-left: auto;
  margin-right: auto;
  width: 70%;
  grid-column: 2/3;
  grid-row: 3/4;
}

.Navbar {
  grid-column: 2/3;
  grid-row: 3/4;
  width: 200px;
}

.Navbar ul {
  padding-left: 0px;
  justify-content: center;
}

.Navbar li {
  text-align: center;
  list-style-type: none;
  margin: 10px;
  border-radius: 5%;
  padding: 0px;
}
.Navbar a {
  text-decoration: none;
  color: white;
  width: 100px;
  padding: 10px;
  border-radius: 5%;
  background-color: rgb(0, 0, 0);
  display: inline-block;
}

.Navbar a:hover {
  box-shadow: 0 0 0 1px rgb(0 0 0 / 100%);
}

li {
  text-align: none;
}

ul {
  list-style-type: none;
}

.img1 {
  margin-top: 100px;
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
  border-right: 4px solid black;
  border-top: 4px solid black;
  grid-column: 3/4;
  grid-row: 3/4;
}
.Content {
  grid-column: 3/4;
  grid-row: 3/4;
}
h1 {
  padding-top: 25px;
}

h2 {
  
  margin-bottom: 0px;
  font-size: 18px;
}
h3 {
  text-align: center;
  margin-bottom: 5px;
  font-size: 15px;
}

p {
  font-size: 13px;
  margin-bottom: 10px;
}

.mail {
  text-align: center;
  margin-top: 0px;
  margin-bottom: 10px;
}

.content {
  display: flex;
  justify-content: center;
  flex-direction: column;
  margin-left: 30px;
  margin-right: 30px;
}

.myFooter {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  grid-column: 2/3;
  grid-row: 4/5;

  text-align: center;
}
.kontaktInfo h3 {
  margin-top: 30px;
}

.kontaktInfo p {
  margin: 0px;
}

.my-pic {
  grid-column: 2/3;
}

@media screen and (max-width: 500px) {

  .text-container {
    width: 100%;
  }
  .picture-container {
    width: 0%;
  }


  /* .main {
    display: grid;
    grid-template-columns: 10px auto 10px;
    grid-template-rows: auto auto auto;
  } */

 

  /* .Navbar {
    grid-column: 1/2;
    grid-row: 2/3;
    width: 100%;
  }

  .Navbar li {
    margin: 2px;
  }

  .Navbar ul {
    display: flex;

    flex-direction: row;
    flex-wrap: wrap;
  }

  .Navbar a {
    text-decoration: none;
    color: white;
    padding: 5px;

    width: auto;
  }
  .Content {
    grid-column: 1/2;
    grid-row: 3/4;
    margin-left: 30px;
    margin-right: 30px;
  }

  h1 {
    padding-top: 0px;
  }

  .Sidebar-content {
    margin-left: 0px;
  }

  .main-content {
    border-right: none;
    border-top: none;
  }
  .myFooter {
    grid-column: 1/2;
    grid-row: 4/5;
    display: flex;
  }

  .img1 {
    margin-top: 100px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 80%;
    border-right: 4px solid black;
    border-top: 4px solid black;
  } */

 
}

